alignment fixx

--- a/src/pages/CustomerPage.css
+++ b/src/pages/CustomerPage.css
@@ -81,7 +81,7 @@
 }
 
 .form-container button {
-  margin-top: 20px;
+  /* margin-top: 20px; */
   background: #f15a24;
   color: white;
   padding: 12px;
